# BrailleGlove

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  create_site_from_doxygen  create_site_from_doxygen.yml  doxygen_documentation.yml  platformio_build.yml
Glove/: CMakeLists.txt  Glove.code-workspace  platformio.ini
Glove/data/: deprecated_test.html  switch.html  test_data.html
Glove/src/: main.cpp  main.ino
Glove/src/ActuatorTypes/: Actuator.h  StrokingActuator.h  TabbingActuator.h  VibrationActuator.h
Glove/src/Controller/: Controller.cpp  Controller.h
Glove/src/Mapper/: ActuatorProcessingOrderMapper.h  BrailleMapper.h
Glove/src/Master/: DataSender.cpp  DataSender.h  WifiMaster.cpp  WifiMaster.h
Glove/src/MockClasses/: MockESP8266WebServer.cpp  MockESP8266WebServer.h  MockLittleFS.cpp  MockLittleFS.h  MockServo.cpp  MockServo.h  MockWiFi.h  MockWifiEspNow.cpp  MockWifiEspNow.h
Glove/src/Models/: GloveModel.h  HandEnum.h
Glove/src/Models/EncodingScheme/: Encoding.h  OSTEncoding.h
Glove/src/Settings/: SingeltonGloveSettings.h  SingeltonWifiSettings.h
Glove/src/Slave/: WifiSlave.cpp  WifiSlave.h
Glove/src/deprecated/: FrontendView.h  WifiMaster copy.cpp  WifiMaster copy.h  master.cpp  new_GloveModel.h  old_WifiMaster.cpp  old_WifiMaster.h  old_WifiSlave.cpp  old_WifiSlave.h  slave.cpp  view.h
Glove/test/: test.cpp  test_main.cpp  unity_config.h
GloveTest/: Doxyfile  generate_docs.py  platformio.ini
GloveTest/html/: _actuator_8h_source.html  _actuator_processing_order_mapper_8h_source.html  _actuator_type_8h_source.html  (+88 more)
(+131 files in other folders)
